# rusle-cli

./: .dockerignore  .env  .gitattributes  .gitignore  Dockerfile  README.md  calc_LS.py  factor_R.py  get_C.py  get_K.py  get_R.py  get_mdt.py  get_ndvi.py  main.py  metodologia_factorC.md  misc.ipynb  pyproject.toml  readme.md  requirements.txt
docs/: metodologia_factorK.md  metodologia_factorLS.md
layers/: cadalso_ejecutado_ok.gpkg  geo_preaudit_182add94_20250724.gpkg  test.geojson  test.gpkg
modules/: get_C.py  get_K.py  get_mdt.py  informe.py
testing/: README.md  misc.ipynb  pyproj_tests.py  test_factor_C.py  test_factor_K.py  test_factor_LS.py  test_factor_R.py  test_informe.py  test_proj_versions.py
