[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rusle-app"
version = "0.1.0"
description = "Herramienta para calcular RUSLE (Revised Universal Soil Loss Equation) usando Google Earth Engine y Qt6"
#readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Daniel Fernandez", email = "daniel.fernandez@sylvestris.com" }
]
license = { text = "MIT" }
keywords = ["rusle", "erosion", "earth-engine", "geospatial", "soil"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

dependencies = [
    "earthengine-api>=0.1.370",
    "pyqt6>=6.4.0",
    "pyqt6-sip>=13.4.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "folium>=0.14.0",
    "ipyleaflet>=0.17.0",
    "ipywidgets>=8.0.0",
    "rasterio>=1.3.0",
    "shapely>=2.0.0",
    "geopandas>=0.12.0",
    "pyproj>=3.5.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
jupyter = [
    "jupyter>=1.0.0",
    "jupyterlab>=3.6.0",
    "ipython>=8.12.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/rusle-app"
Documentation = "https://github.com/yourusername/rusle-app#readme"
Repository = "https://github.com/yourusername/rusle-app.git"
"Bug Tracker" = "https://github.com/yourusername/rusle-app/issues"

[tool.hatch.version]
path = "rusle_funcs.py"
pattern = "__version__ = ['\"](?P<version>[^'\"]*)['\"]"

[tool.hatch.build.targets.wheel]
packages = ["rusle_funcs.py"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=. --cov-report=html"

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
]
